<resources>
	<string name="app_name">养猪专业户</string>
	<string name="action_settings">Settings</string>

	<string name="ensure">确定</string>
	<string name="cancel">取消</string>
	<string name="display_none">--</string>
	<string name="display_none1">-</string>

	<string name="year">年</string>
	<string name="month">月</string>
	<string name="day">日</string>
	<string name="day1">天</string>
	<string name="kilogram">公斤</string>
	<string name="meter">米</string>
	<string name="length">长</string>
	<string name="width">宽</string>

	<string name="prompt_open_camera_failure">相机打开失败，请重试</string>
	<string name="prompt_uploading">正在拼了命的为您上传…</string>
	<string name="prompt_uploading_failure">抱歉，上传失败，请重试</string>
	<string name="prompt_uploading_success">上传猪照片成功</string>
	<string name="prompt_loading">正在拼了命的为您加载…</string>
	<string name="prompt_loading_failure">抱歉，加载失败，请重试</string>
	<string name="prompt_check_network">世界上最遥远的距离就是没网。检查设置</string>

	<string name="photo_source_album">相册</string>
	<string name="photo_source_camera">拍照</string>

	<string name="pig_photo_upload">上传</string>
	<string name="pig_photo_take_photo">拍照</string>
	<string name="pig_photo_photo_album">相册</string>
	<string name="pig_photo_not_take_pic">还没有拍照!</string>

	<string name="year_month_day" formatted="false">%s年%s月%s日</string>
	<string name="pig_photo_date" formatted="false">时间：%s</string>
	<!--猪增加体重-->
	<string name="pig_increase_weight" formatted="false">增长：%s公斤</string>
	<!--猪体重-->
	<string name="pig_weight" formatted="false">体重：%s公斤</string>
	<!--猪体温-->
	<string name="pig_temperature" formatted="false">体温：%s℃</string>
	<!--猪年龄-->
	<string name="pig_age" formatted="false">年龄：%s月%s天</string>
	<!--猪卖家名字-->
	<string name="pig_seller_name" formatted="false">%s家</string>

	<string name="pig_detail_label_varieties">品种:</string>
	<string name="pig_detail_label_age">猪龄:</string>
	<string name="pig_detail_label_weight">体重:</string>
	<string name="pig_detail_label_temperature">体温:</string>
	<string name="pig_detail_label_fat">体脂:</string>
	<string name="pig_detail_label_steps">步数:</string>
	<string name="pig_detail_label_environment">环境:</string>
	<string name="pig_detail_buyer_number">已有%1$d人购买</string>
	<string name="pig_detail_weight_increase">我又胖%1$.0f公斤了哦</string>
	<string name="pig_detail_weight">%1$.0f公斤</string>
	<string name="pig_detail_steps">%1$d步</string>
	<string name="pig_detail_age">%1$.1f月</string>
	<string name="pig_detail_title">详细信息</string>

	<string name="pig_chart_title_weight">体重</string>
	<string name="pig_chart_title_steps">步数</string>
	<string name="pig_chart_title_temperature">体温</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="title_activity_pig_detail">PigDetailActivity</string>

	<!--卖家主页-->
	<!--买家数量-->
	<string name="seller_main_pig_buyers_number" formatted="false">已有%d家购买</string>
	<string name="record_pig_growth_info">是否开始记录猪猪的成长历程？</string>
	<string name="prompt_select_hogpen_photo">亲，没有选择猪圈照片哦~</string>
	<string name="prompt_select_hogpen_photo_again">亲，请重新选择猪圈照片~</string>
	<string name="prompt_take_hogpen_photo_again">亲，请重新拍摄猪圈照片~</string>
	<string name="prompt_add_pig_failure">添加猪失败，请重试</string>
	<string name="prompt_add_hogpen_failure">添加猪圈失败，请重试</string>
	<string name="prompt_add_loading">添加中，请稍后…</string>
	<string name="prompt_hogpen_exceed_limit">猪圈个数超过限制</string>
	<string name="prompt_camera_permission">养猪专业户需要调用您的相机来拍照</string>
	<string name="prompt_get_permission">请到安全中心->授权管理->应用权限管理中对应用进行授权</string>
	<string name="prompt_turn_phone_azimuth">请调整手机方向后再试！</string>

	<string name="pig_add_category">猪的品种</string>
	<string name="pig_add_age">入栏年龄</string>
	<string name="pig_add_weight">入栏体重</string>
	<string name="pig_add_time">入栏时间</string>

	<!--登录界面-->
	<string name="activity_title_login">角色切换</string>
	<string name="login_buyer_name">苍老师</string>
	<string name="login_seller_name">刘司机</string>
	<string name="login_prompt_select_role">亲，请选择一个角色登录</string>
	<string name="login_prompt_login_failure">登录失败，请重试！</string>
	<string name="login_login_in">正在拼了命的为您登录…</string>

	<!--买家主页-->
	<string name="activity_title_buyer_main" formatted="false">%s的猪</string>
	<string name="hogpen_photo">请上传猪圈照片</string>

	<!--成长历程-->
	<string name="activity_title_growth_history">成长历程</string>
	<string name="activity_distance_camera">拍照记录</string>
	<string name="prompt_none_growth_infos">抱歉，还没有成长记录，请先拍照！</string>

	<!--提示-->
	<string name="prompt_query_pig_categories_failure">获取猪品种失败，请重新打开应用</string>
	<string name="prompt_query_pig_parts_failure">获取猪部位失败，请重新打开应用</string>

	<!--拍照界面-->
	<string name="pig_photo_prompt_saving">正在拼了命的为您处理，请稍后…</string>
	<string name="pig_photo_prompt_saving_failure">照片保存失败，请重新拍照</string>
	<string name="pig_photo_height">拍摄高度：</string>
	<string name="pig_photo_distance">拍摄距离：</string>
	<string name="pig_photo_angle">拍摄角度：</string>
	<string name="pig_photo_angle_value" formatted="false">%s度</string>
	<string name="pig_photo_distance_value" formatted="false">%s米</string>
	<string name="pig_photo_height_value" formatted="false">%s米</string>
	<string name="pig_photo_original_image">照片原图</string>
	<string name="pig_photo_crop_image">照片截图</string>
	<!--添加猪界面-->
	<string name="activity_title_add_pig">添加猪</string>
	<string name="activity_title_add_hogpen">添加猪圈</string>

	<!--上传猪界面-->
	<string name="activity_title_upload_pig_photo">上传照片</string>

	<!--角色切换界面-->
	<string name="activity_switch_role">用户切换</string>
	<string name="select_customer">选择买家</string>
	<string name="select_provider">选择卖家</string>

	<!--照片详情界面-->
	<string name="activity_title_photo_detail">照片详情</string>


</resources>
