<?xml version="1.0" encoding="utf-8"?>
<!--上传猪照片界面布局-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/add_page_bg"
	android:gravity="center"
	android:orientation="vertical">

	<!--猪照片-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="30dp"
		android:gravity="center"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/pig_photo_iv"
			android:layout_width="150dp"
			android:layout_height="150dp"
			android:layout_marginLeft="10dp"
			android:scaleType="centerCrop"
			android:src="@mipmap/pig_photo_default1"
			tools:ignore="contentDescription"/>
		<TextView
			android:id="@+id/pig_photo_tv"
			style="@style/TextLittle.Light"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:gravity="center"
			android:text="@string/pig_photo_original_image"/>
	</LinearLayout>

	<!--分隔线-->
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginBottom="15dp"
		android:layout_marginLeft="2dp"
		android:layout_marginRight="2dp"
		android:layout_marginTop="15dp"
		android:src="@color/add_page_divider"
		tools:ignore="contentDescription"/>

	<!--猪照片截图-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical">
		<ImageView
			android:id="@+id/pig_photo_crop_iv"
			android:layout_width="120dp"
			android:layout_height="120dp"
			android:layout_marginLeft="10dp"
			android:scaleType="center"
			android:src="@mipmap/pig_photo_default1"
			tools:ignore="contentDescription"/>
		<TextView
			android:id="@+id/pig_photo_crop_tv"
			style="@style/TextLittle.Light"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:gravity="center"
			android:text="@string/pig_photo_crop_image"/>
	</LinearLayout>

	<!--分隔线-->
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginBottom="15dp"
		android:layout_marginLeft="2dp"
		android:layout_marginRight="2dp"
		android:layout_marginTop="15dp"
		android:src="@color/add_page_divider"
		tools:ignore="contentDescription"/>

	<!--显示拍摄角度-->
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			style="@style/TextNormal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pig_photo_angle"/>
		<TextView
			android:id="@+id/pig_photo_angle_tv"
			style="@style/TextNormal"
			android:layout_width="65dp"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<!--显示拍摄高度-->
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:orientation="horizontal">
		<TextView
			style="@style/TextNormal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pig_photo_height"/>
		<TextView
			android:id="@+id/pig_photo_height_tv"
			style="@style/TextNormal"
			android:layout_width="65dp"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<!--显示拍摄距离-->
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:orientation="horizontal">
		<TextView
			style="@style/TextNormal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pig_photo_distance"/>
		<TextView
			android:id="@+id/pig_photo_distance_tv"
			style="@style/TextNormal"
			android:layout_width="65dp"
			android:layout_height="wrap_content"/>
	</LinearLayout>

</LinearLayout>