<?xml version="1.0" encoding="utf-8"?>
<!--添加猪对话框布局-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">
	<!--对话框标题-->
	<ImageView
		android:id="@+id/add_pig_title_iv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@mipmap/add_pig_dialog_title"
		tools:ignore="contentDescription"/>
	<!--对话框内容-->
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:background="@mipmap/add_dialog_bg"
		android:gravity="center_horizontal"
		android:orientation="vertical">

		<!--添加猪信息布局-->
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:layout_marginTop="5dp"
			android:background="@mipmap/add_dialog_content_bg"
			android:orientation="vertical"
			android:padding="10dp">

			<!--猪品种选择-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/pig_add_category_tv"
					style="@style/TextNormal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/pig_add_category"/>
				<!--选择猪品种-->
				<com.ai2020lab.aiviews.wheelview.WheelView
					android:id="@+id/pig_add_category_wv"
					android:layout_width="80dp"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					app:dividerColor="@android:color/white"
					app:gravity="center"
					app:textColorCenter="@color/aiview_text_normal"
					app:textColorOut="@color/aiview_text_light"
					app:textSize="16sp"/>

			</LinearLayout>

			<!--入栏年龄选择-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:gravity="center_vertical"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/pig_add_age_tv"
					style="@style/TextNormal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/pig_add_age"/>
				<!--选择入栏猪龄-->
				<com.ai2020lab.pigadopted.view.pickerview.PigAgePickerView
					android:id="@+id/pig_add_age_pv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"/>

			</LinearLayout>

			<!--入栏体重选择-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:gravity="center_vertical"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/pig_add_weight_tv"
					style="@style/TextNormal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/pig_add_weight"/>
				<!--选择入栏体重-->
				<com.ai2020lab.pigadopted.view.pickerview.PigWeightPickerView
					android:id="@+id/pig_add_weight_pv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"/>

			</LinearLayout>

			<!--入栏时间选择-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:gravity="center_vertical"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/pig_add_time_tv"
					style="@style/TextNormal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/pig_add_time"/>
				<!--选择入栏时间-->
				<com.ai2020lab.pigadopted.view.pickerview.DatePickerView
					android:id="@+id/pig_add_date_pv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"/>

			</LinearLayout>

		</LinearLayout>
		<!--取消，确认按钮布局-->
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="10dp"
			android:layout_marginTop="10dp"
			android:gravity="center"
			android:orientation="horizontal">
			<Button
				android:id="@+id/cancel_btn"
				style="@style/TextNormal"
				android:layout_width="80dp"
				android:layout_height="40dp"
				android:background="@drawable/cancel_btn_short_selector"
				android:text="@string/cancel"
				android:textColor="@android:color/white"/>
			<Button
				android:id="@+id/ensure_btn"
				style="@style/TextNormal"
				android:layout_width="80dp"
				android:layout_height="40dp"
				android:layout_marginLeft="10dp"
				android:background="@drawable/ensure_btn_short_selector"
				android:text="@string/ensure"
				android:textColor="@android:color/white"/>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>