<?xml version="1.0" encoding="utf-8"?>
<!--添加猪圈对话框布局-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">
	<!--对话框标题-->
	<ImageView
		android:id="@+id/add_hogpen_title_iv"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@mipmap/add_hogpen_dialog_title"
		tools:ignore="contentDescription"/>
	<!--对话框内容-->
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:background="@mipmap/add_hogpen_dialog_bg"
		android:gravity="center_horizontal"
		android:orientation="vertical">

		<!--添加猪信息布局-->
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:layout_marginTop="5dp"
			android:background="@mipmap/add_pig_dialog_content_bg"
			android:orientation="vertical"
			android:padding="20dp">

			<!--猪圈长度选择-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:gravity="center_vertical"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/hogpen_length_tv"
					style="@style/TextNormal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/length"/>
				<com.ai2020lab.pigadopted.view.pickerview.DimensionPickerView
					android:id="@+id/hogpen_length_pv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"/>

			</LinearLayout>

			<!--猪圈宽度选择-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:gravity="center_vertical"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/hogpen_width_tv"
					style="@style/TextNormal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/width"/>
				<!--选择入栏体重-->
				<com.ai2020lab.pigadopted.view.pickerview.DimensionPickerView
					android:id="@+id/hogpen_width_pv"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"/>

			</LinearLayout>

			<!--照片选择-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:gravity="center_vertical"
				android:orientation="horizontal">
				<TextView
					android:id="@+id/hogpen_photo_tv"
					style="@style/TextNormal"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/hogpen_photo"/>
				<ImageView
					android:id="@+id/hogpen_photo_iv"
					android:layout_width="100dp"
					android:layout_height="100dp"
					android:layout_marginLeft="10dp"
					android:src="@mipmap/add_photo_bg"
					tools:ignore="contentDescription"/>

			</LinearLayout>

		</LinearLayout>
		<!--取消，确认按钮布局-->
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:layout_marginBottom="10dp"
			android:layout_marginTop="10dp"
			android:gravity="center"
			android:orientation="horizontal">
			<Button
				android:id="@+id/cancel_btn"
				style="@style/TextNormal"
				android:layout_width="80dp"
				android:layout_height="40dp"
				android:background="@drawable/cancel_btn_short_selector"
				android:text="@string/cancel"
				android:textColor="@android:color/white"/>
			<Button
				android:id="@+id/ensure_btn"
				style="@style/TextNormal"
				android:layout_width="80dp"
				android:layout_height="40dp"
				android:layout_marginLeft="10dp"
				android:background="@drawable/ensure_btn_short_selector"
				android:text="@string/ensure"
				android:textColor="@android:color/white"/>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>