<?xml version="1.0" encoding="utf-8"?>
<!--测距相机拍照信息-->
<!--注意显示的文字要设置固定宽度，高度，否则屏幕会闪动-->
<LinearLayout
	android:id="@+id/take_photo_info_ll"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			style="@style/TextNormal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pig_photo_angle"
			android:textColor="@android:color/white"/>
		<!--显示拍摄角度-->
		<TextView
			android:id="@+id/take_photo_angle_tv"
			style="@style/TextNormal"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:textColor="@android:color/white"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:orientation="horizontal">
		<TextView
			style="@style/TextNormal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pig_photo_height"
			android:textColor="@android:color/white"/>
		<!--显示拍摄高度-->
		<TextView
			android:id="@+id/take_photo_height_tv"
			style="@style/TextNormal"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:textColor="@android:color/white"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:orientation="horizontal">
		<TextView
			style="@style/TextNormal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pig_photo_distance"
			android:textColor="@android:color/white"/>
		<!--显示拍摄距离-->
		<TextView
			android:id="@+id/take_photo_distance_tv"
			style="@style/TextNormal"
			android:layout_width="65dp"
			android:layout_height="wrap_content"
			android:singleLine="true"
			android:textColor="@android:color/white"/>
	</LinearLayout>
</LinearLayout>