<?xml version="1.0" encoding="utf-8"?>
<!--添加猪界面布局-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@color/add_page_bg">

	<!--猪品种选择-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="60dp"
		android:layout_marginTop="5dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/pig_add_category_tv"
			style="@style/TextNormal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pig_add_category"/>
		<!--选择猪品种-->
		<com.ai2020lab.aiviews.wheelview.WheelView
			android:id="@+id/pig_add_category_wv"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			app:dividerColor="@color/wheelview_divider_color"
			app:gravity="center"
			app:textColorCenter="@color/aiview_text_normal"
			app:textColorOut="@color/aiview_text_light"
			app:textSize="16sp"/>
	</LinearLayout>
	<!--分隔线-->
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="2dp"
		android:layout_marginRight="2dp"
		android:layout_marginTop="10dp"
		android:src="@color/add_page_divider"
		tools:ignore="contentDescription"/>
	<!--入栏年龄选择-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="60dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/pig_add_age_tv"
			style="@style/TextNormal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pig_add_age"/>
		<!--选择入栏猪龄-->
		<com.ai2020lab.pigadopted.view.pickerview.PigAgePickerView
			android:id="@+id/pig_add_age_pv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"/>

	</LinearLayout>
	<!--分隔线-->
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="2dp"
		android:layout_marginRight="2dp"
		android:layout_marginTop="10dp"
		android:src="@color/add_page_divider"
		tools:ignore="contentDescription"/>
	<!--入栏体重选择-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="60dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/pig_add_weight_tv"
			style="@style/TextNormal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pig_add_weight"/>
		<!--选择入栏体重-->
		<com.ai2020lab.pigadopted.view.pickerview.PigWeightPickerView
			android:id="@+id/pig_add_weight_pv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"/>
	</LinearLayout>
	<!--分隔线-->
	<ImageView
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="2dp"
		android:layout_marginRight="2dp"
		android:layout_marginTop="10dp"
		android:src="@color/add_page_divider"
		tools:ignore="contentDescription"/>
	<!--入栏时间选择-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="60dp"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/pig_add_time_tv"
			style="@style/TextNormal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pig_add_time"/>
		<!--选择入栏时间-->
		<com.ai2020lab.pigadopted.view.pickerview.DatePickerView
			android:id="@+id/pig_add_date_pv"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"/>
	</LinearLayout>

</LinearLayout>